@@ -1,4 +1,6 @@
-    - html_options passthru all unknown paramters now
+    - html_checkboxes and html_radios passthru all unknown paramters now
+      additionally their output is now XHTML compliant (messju)
+    - html_options passthru all unknown paramters now (messju)
     - fix link functionality of html_image, also make
       output XHTML compatible (Hinrich Donner, Monte)
     - append "@" to default modifier vars/args
